# bazel-latex

./: .cirrus.yml  BUILD.bazel  WORKSPACE  latex.bzl  repositories.bzl  run_lualatex.py  tool_wrapper.py  tool_wrapper.sh  toolchain.bzl
.github/workflows/: ci.yaml  workflow.yaml
example/: BUILD.bazel
