load(":toolchain.bzl", "latex_toolchain")

exports_files([
    "run_lualatex.py",
    "view_pdf.sh",
])

toolchain_type(
    name = "latex_toolchain_type",
    visibility = ["//visibility:public"],
)

latex_toolchain(
    exec_compatible_with = [
        "@bazel_tools//platforms:freebsd",
        "@bazel_tools//platforms:x86_64",
    ],
    platform = "amd64-freebsd",
)

latex_toolchain(
    exec_compatible_with = [
        "@bazel_tools//platforms:osx",
        "@bazel_tools//platforms:x86_64",
    ],
    platform = "x86_64-darwin",
)

latex_toolchain(
    exec_compatible_with = [
        "@bazel_tools//platforms:linux",
        "@bazel_tools//platforms:x86_64",
    ],
    platform = "x86_64-linux",
)

filegroup(
    name = "core_dependencies",
    srcs = [
        "@bazel_latex//:run_lualatex.py",
        "@texlive_extra__tlpkg__TeXLive",
        "@texlive_texmf__texmf-dist__fonts__enc__dvips__base",
        "@texlive_texmf__texmf-dist__fonts__enc__dvips__cm-super",
        "@texlive_texmf__texmf-dist__fonts__enc__dvips__lm",
        "@texlive_texmf__texmf-dist__fonts__map__pdftex__updmap",
        "@texlive_texmf__texmf-dist__fonts__opentype__public__lm",
        "@texlive_texmf__texmf-dist__fonts__tfm__public__cm",
        "@texlive_texmf__texmf-dist__fonts__tfm__public__latex-fonts",
        "@texlive_texmf__texmf-dist__fonts__tfm__public__lm",
        "@texlive_texmf__texmf-dist__fonts__type1__public__amsfonts__cm",
        "@texlive_texmf__texmf-dist__fonts__type1__public__cm-super",
        "@texlive_texmf__texmf-dist__fonts__type1__public__lm",
        "@texlive_texmf__texmf-dist__scripts__texlive",
        "@texlive_texmf__texmf-dist__tex__generic__config",
        "@texlive_texmf__texmf-dist__tex__generic__hyphen",
        "@texlive_texmf__texmf-dist__tex__generic__tex-ini-files",
        "@texlive_texmf__texmf-dist__tex__generic__unicode-data",
        "@texlive_texmf__texmf-dist__tex__latex__base",
        "@texlive_texmf__texmf-dist__tex__latex__latexconfig",
        "@texlive_texmf__texmf-dist__tex__latex__lm",
        "@texlive_texmf__texmf-dist__tex__luatex__lualibs",
        "@texlive_texmf__texmf-dist__tex__luatex__luaotfload",
        "@texlive_texmf__texmf-dist__web2c",
    ],
    visibility = ["//visibility:public"],
)

py_binary(
    name = "run_lualatex",
    srcs = ["run_lualatex.py"],
    visibility = ["//visibility:public"],
)

py_binary(
    name = "tool_wrapper_py",
    srcs = ["tool_wrapper.py"],
    main = "tool_wrapper.py",
    data = [":lib_ghost_script_configure"],
    visibility = ["//visibility:public"],
)

load("@rules_foreign_cc//foreign_cc:defs.bzl", "configure_make")

filegroup(
    name = "ghostscript_dependencies",
    srcs = [
        "@texlive_texmf__texmf-dist__dvips__base",
    ],
    visibility = ["//visibility:public"],
)

configure_make(
    name = "lib_ghost_script_configure",
    configure_in_place = True,
    autogen = True,
    install_prefix = "output",
    lib_source = "@ghost_script_source//:all_srcs",
    targets = ["so", "soinstall"],
    out_shared_libs = ["libgs.so"],
    visibility = ["//visibility:public"]
)
