load("@bazel_latex//:latex.bzl", "latex_document", "latex_to_svg")

latex_document(
    name = "my_report",
    srcs = glob([
        "chapters/*.tex",
    ]) + [
        "@bazel_latex//packages:biblatex",
        "references.bib",
        "//example/example_class:example_class",
    ],
    cmd_flags = ["--bibtex-cmd=biber"],
    main = "my_report.tex",
)

latex_document(
    name = "my_dvi_report",
    format = "dvi",
    srcs = glob([
        "chapters/*.tex",
    ]) + [
        "@bazel_latex//packages:biblatex",
        "references.bib",
        "//example/example_class:example_class",
    ],
    cmd_flags = ["--bibtex-cmd=biber"],
    main = "my_report.tex",
)

latex_document(
    name = "my_standalone_figure",
    srcs = ["@bazel_latex//packages:drawstack"],
    main = "tikz.tex",
)

latex_to_svg(
    name = "example_svg",
    src = ":my_standalone_figure",
)
